--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@livestore/sync-cf": "0.3.1",
     "@livestore/wa-sqlite": "1.0.5-dev.2",
     "@overengineering/fps-meter": "0.1.2",
+    "@types/three": "^0.181.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "three": "^0.181.2",
     "todomvc-app-css": "2.4.3"
   },
   "devDependencies": {
