--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "build": "vite build",
-    "dev": "VITE_LIVESTORE_SYNC_URL=http://localhost:8787 vite --force",
+    "dev": "vite --force",
     "preview": "vite preview",
     "wrangler:deploy": "wrangler deploy"
   }
